--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "mongoose": "^6.4.0"
   },
   "scripts": {
-    "dev": "nodemon index.js"
+    "start": "nodemon index.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.18"
