--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "html-parser": "^0.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
     "react-quill": "^1.3.5",
     "react-router-dom": "^6.3.0",
