--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
-    "html-parser": "^0.11.0",
+    "dompurify": "^2.3.8",
+    "html-react-parser": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-html-parser": "^2.0.2",
